[gd_scene load_steps=7 format=3 uid="uid://cbctqmr1j5xx8"]

[ext_resource type="Script" path="res://Scenes/Components/Enemies/Mob/mob.gd" id="1_8x602"]
[ext_resource type="Texture2D" uid="uid://2ejmwk1fux6h" path="res://Assets/Images/Sprites/128x128/Alien02.png" id="2_cre7p"]
[ext_resource type="Texture2D" uid="uid://c0t71hpsefl3l" path="res://Assets/Images/Textures/light_fade.png" id="6_og4ls"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yoytr"]
radius = 48.0104

[sub_resource type="CircleShape2D" id="CircleShape2D_8xdvp"]
radius = 288.998

[sub_resource type="CircleShape2D" id="CircleShape2D_fufn5"]
radius = 500.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent")]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 8
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_8x602")
nav_agent = NodePath("Navigation/NavigationAgent2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_yoytr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cre7p")

[node name="Lights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(1, -0.999999)
scale = Vector2(0.048, 0.0506966)
color = Color(0.035, 0.839, 1, 1)
energy = 16.0
blend_mode = 2
shadow_color = Color(0.0705882, 0.462745, 0.541176, 1)
shadow_filter = 1
shadow_filter_smooth = 2.1
shadow_item_cull_mask = 0
texture = ExtResource("6_og4ls")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_max_distance = 1000.0
debug_enabled = true

[node name="RecalculateTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[node name="Aggro" type="Node2D" parent="."]

[node name="AggroRange" type="Area2D" parent="Aggro"]
collision_layer = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/AggroRange"]
visible = false
shape = SubResource("CircleShape2D_8xdvp")
debug_color = Color(0.964706, 0, 0.0235294, 0.419608)

[node name="DeaggroRange" type="Area2D" parent="Aggro"]
collision_layer = 2
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro/DeaggroRange"]
visible = false
shape = SubResource("CircleShape2D_fufn5")

[connection signal="navigation_finished" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="timeout" from="Navigation/RecalculateTimer" to="." method="_on_recalculate_timer_timeout"]
[connection signal="area_entered" from="Aggro/AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="Aggro/DeaggroRange" to="." method="_on_deaggro_range_area_exited"]
